--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <meta name="viewport" content="width+devie-width, initial-scale=1.0"/>
-    <body>
+  </head>
+  <body>
     <style>
      "background-color:black"
+    </style>
+  </body>
+<html>
+  
+      
